feat: configuração CORS dinâmica via variável de ambiente CORS_ALLOWED_ORIGINS