@@ -114,9 +114,26 @@ public class SecurityConfiguracao {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuracao = new CorsConfiguration();
-        configuracao.applyPermitDefaultValues();
+        
+        // Permite credenciais (cookies, headers de autenticação)
         configuracao.setAllowCredentials(true);
-        configuracao.setAllowedOrigins(List.of("http://localhost:5173","http://localhost:3000"));// URL do frontend
+        
+        // Lê origens permitidas de variável de ambiente ou usa valores padrão para desenvolvimento
+        String allowedOriginsEnv = System.getenv("CORS_ALLOWED_ORIGINS");
+        if (allowedOriginsEnv != null && !allowedOriginsEnv.isEmpty()) {
+            // Suporta múltiplas origens separadas por vírgula
+            List<String> origins = Arrays.asList(allowedOriginsEnv.split(","));
+            configuracao.setAllowedOrigins(origins);
+        } else {
+            // Valores padrão para desenvolvimento local
+            configuracao.setAllowedOrigins(List.of(
+                "http://localhost:5173",
+                "http://localhost:3000",
+                "http://localhost:8080"
+            ));
+        }
+        
+        // Métodos HTTP permitidos
         configuracao.setAllowedMethods(
                 Arrays.asList(
                         HttpMethod.GET.name(),
@@ -127,8 +144,27 @@ public class SecurityConfiguracao {
                         HttpMethod.OPTIONS.name(),
                         HttpMethod.HEAD.name(),
                         HttpMethod.TRACE.name()));
-
-        configuracao.setExposedHeaders(List.of(HttpHeaders.CONTENT_DISPOSITION));
+        
+        // Headers permitidos
+        configuracao.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+        
+        // Headers expostos para o frontend
+        configuracao.setExposedHeaders(Arrays.asList(
+                HttpHeaders.CONTENT_DISPOSITION,
+                "Authorization",
+                "Content-Type"
+        ));
+        
+        // Tempo de cache para preflight requests
+        configuracao.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource origem = new UrlBasedCorsConfigurationSource();
         origem.registerCorsConfiguration("/**", configuracao);
